<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotiActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="예방접종 전 주의사항"
            android:textSize="12dp"
            android:id="@+id/date1"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:backgroundTint="@color/darkblue"
            android:textColor="@android:color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:background="@drawable/border"
            >

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:srcCompat="@drawable/h8"
                tools:layout_editor_absoluteX="28dp"
                tools:layout_editor_absoluteY="92dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:textSize="11dp"
                    android:text="@string/pre_notice_1" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="2dp"
                    android:textSize="11dp"
                    android:text="@string/pre_notice_2" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="2dp"
                    android:textSize="11dp"
                    android:text="@string/pre_notice_3" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="2dp"
                    android:textSize="11dp"
                    android:text="@string/pre_notice_4" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="2dp"
                    android:textSize="11dp"
                    android:text="@string/pre_notice_5" />

            </LinearLayout>




        </LinearLayout>]


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="예방접종 후 주의사항"
            android:textSize="12dp"
            android:id="@+id/date"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:backgroundTint="@color/darkblue"
            android:textColor="@android:color/black"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:background="@drawable/border"
            >

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:srcCompat="@drawable/h7"
                tools:layout_editor_absoluteX="28dp"
                tools:layout_editor_absoluteY="92dp" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:textSize="11dp"
                    android:text="@string/after_notice_1" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="2dp"
                    android:textSize="11dp"
                    android:text="@string/after_notice_2" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="2dp"
                    android:textSize="11dp"
                    android:text="@string/after_notice_3" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="2dp"
                    android:textSize="11dp"
                    android:text="@string/after_notice_4" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="2dp"
                    android:textSize="11dp"
                    android:text="@string/after_notice_5" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/textView0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/darkblue"
            android:layout_gravity="center"
            android:textColor="@color/red"
            android:layout_marginTop="30dp"
            android:text="예방접종 주의 사항">

        </Button>




        <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
            android:id="@+id/youtube_player_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:autoPlay="false"
            />


    </LinearLayout>


</LinearLayout>